# 1.STQR

./: .gitignore  FINAL_KEYBOARD_LAYOUT.md  FIX_FIREWALL.bat  FULL_TEST.bat  HIZLI_KULLANIM.md  INSTALL_APK.bat  PRD.MD  README.md  START_MOUSE_SERVER.bat  START_SCREEN_SERVER.bat  TEST_SCREEN.bat  TEST_SERVER.bat  TEST_WIFI_CONNECTION.bat  WIFI_MOUSE_KULLANIM.md  WIFI_NASIL_KULLANILIR.md  capacitor.config.ts  env.example  generate-icons.cjs  generate-icons.js  git_files.txt  index.html  kurulum.bat  mobil-ayarlar.cjs  package-backend.json  package-lock.json  package.json  qkeyboard_server.py  qkeyboard_server_screen.py  resize-logo.ps1  server.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
android/app/: .project  CMakeLists.txt  build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: capacitor.config.json  capacitor.plugins.json  dictionary_tr.txt
android/app/src/main/assets/public/: index.html
android/app/src/main/cpp/: llama_android.cpp
android/app/src/main/res/drawable/: auto_clicker_btn_secondary.xml  auto_clicker_btn_start.xml  auto_clicker_panel_background.xml  btn_action_1.xml  btn_action_2.xml  btn_action_4.xml  btn_action_5.xml  btn_clear_bg.xml  btn_edit_bg.xml  btn_emergency_bg.xml  btn_eye_bg.xml  btn_minimize_bg.xml  btn_start_bg.xml  btn_start_selector.xml  btn_stop_bg.xml  btn_stop_selector.xml  btn_undo_bg.xml  calibration_target_drawable.xml  circle_button_background_gold.xml  circle_button_background_green.xml  circle_button_background_red.xml  (+70 more)
(+247 files in other folders)
